# verona

devops/: ci.yml  nightly.yml
experiments/process_sandbox/: CMakeLists.txt  child_malloc.h  helpers.h  library_runner.cc  libsandbox.cc  privilege_elevation_upcalls.h  sandbox.hh  shared_memory_region.h
experiments/process_sandbox/cxxapi/: cxxsandbox.h
experiments/process_sandbox/platform/: onebitsem_futex.h  onebitsem_umtx.h  platform.h  poller_epoll.h  sandbox.h  sandbox_seccomp-bpf.h  shm_posix.h  socketpair_posix.h  syscall_context_linux.h
experiments/process_sandbox/tests/: CMakeLists.txt  child_process.cc  onebitsem-basic.cc  onebitsem-child.cc  poller.cc  sandbox-basic.cc  sandbox-crash.cc  sandbox-upcall-basic.cc  sandbox-zlib.cc  sandboxlib-basic.cc  sandboxlib-crash.cc  sandboxlib-zlib.cc  shm.cc  socketpair-sendhandle.cc  socketpair.cc
src/rt/test/: logging.h
